--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "tslib": "^2.0.0"
   },
   "devDependencies": {
-    "@nrwl/tao": "12.5.7",
     "@nrwl/cli": "12.5.7",
+    "@nrwl/storybook": "^12.5.7",
+    "@nrwl/tao": "12.5.7",
     "@nrwl/workspace": "12.5.7",
     "@types/node": "14.14.33",
     "dotenv": "8.2.0",
+    "prettier": "^2.3.1",
     "ts-node": "~9.1.1",
-    "typescript": "~4.2.4",
-    "prettier": "^2.3.1"
+    "typescript": "~4.2.4"
   }
 }
