--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@nrwl/cli": "12.5.7",
+    "@nrwl/next": "^12.5.7",
     "@nrwl/storybook": "^12.5.7",
     "@nrwl/tao": "12.5.7",
     "@nrwl/workspace": "12.5.7",
