--- a/package.json
+++ b/package.json
@@ -27,17 +27,35 @@
   },
   "private": true,
   "dependencies": {
+    "@nrwl/next": "12.5.7",
+    "core-js": "^3.6.5",
+    "document-register-element": "1.13.1",
+    "next": "10.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@nrwl/cli": "12.5.7",
+    "@nrwl/cypress": "12.5.7",
+    "@nrwl/jest": "12.5.7",
     "@nrwl/next": "^12.5.7",
+    "@nrwl/react": "12.5.7",
     "@nrwl/storybook": "^12.5.7",
     "@nrwl/tao": "12.5.7",
+    "@nrwl/web": "12.5.7",
     "@nrwl/workspace": "12.5.7",
+    "@testing-library/react": "11.2.6",
+    "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3",
+    "cypress": "^7.3.0",
     "dotenv": "8.2.0",
+    "jest": "27.0.3",
     "prettier": "^2.3.1",
+    "ts-jest": "27.0.3",
     "ts-node": "~9.1.1",
     "typescript": "~4.2.4"
   }
