--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   },
   "private": true,
   "dependencies": {
+    "@emotion/react": "11.1.5",
+    "@emotion/server": "11.0.0",
+    "@emotion/styled": "11.1.5",
     "@nrwl/next": "12.5.7",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
@@ -37,9 +40,16 @@
     "tslib": "^2.0.0"
   },
   "devDependencies": {
+    "@babel/core": "7.12.13",
+    "@babel/preset-env": "7.12.13",
+    "@babel/preset-react": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
+    "@emotion/babel-plugin": "11.2.0",
     "@nrwl/cli": "12.5.7",
     "@nrwl/cypress": "12.5.7",
+    "@nrwl/eslint-plugin-nx": "12.5.7",
     "@nrwl/jest": "12.5.7",
+    "@nrwl/linter": "12.5.7",
     "@nrwl/next": "^12.5.7",
     "@nrwl/react": "12.5.7",
     "@nrwl/storybook": "^12.5.7",
@@ -51,8 +61,18 @@
     "@types/node": "14.14.33",
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.3",
+    "@typescript-eslint/eslint-plugin": "4.19.0",
+    "@typescript-eslint/parser": "4.19.0",
+    "babel-jest": "26.2.2",
     "cypress": "^7.3.0",
     "dotenv": "8.2.0",
+    "eslint": "7.22.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.23.1",
+    "eslint-plugin-react-hooks": "4.2.0",
     "jest": "27.0.3",
     "prettier": "^2.3.1",
     "ts-jest": "27.0.3",
