[Config] Added components library

--- a/nx.json
+++ b/nx.json
@@ -33,12 +33,8 @@
     ]
   },
   "projects": {
-    "components": {
+    "atlascode-components": {
       "tags": []
-    },
-    "components-e2e": {
-      "tags": [],
-      "implicitDependencies": ["components"]
     },
     "olympus": {
       "tags": []
