[Feature] Generated a new library that will hold reusable react animations/transitions and animation utilities

--- a/nx.json
+++ b/nx.json
@@ -46,6 +46,9 @@
       "tags": [],
       "implicitDependencies": ["olympus-core"]
     },
+    "ui-animations": {
+      "tags": []
+    },
     "ui-components": {
       "tags": []
     },
