[Feature] Generated new react animation that will be used to export all lottie related utilities and animations

--- a/nx.json
+++ b/nx.json
@@ -55,6 +55,9 @@
     "ui-layouts": {
       "tags": []
     },
+    "ui-lotties": {
+      "tags": []
+    },
     "ui-pages": {
       "tags": []
     }
