[Feature][Config] Added a shared library to be used as an entry point for various utility/helper functions that dont rely on any STRICT dependency

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,7 +24,12 @@
       "@atlascode/react-render-props": [
         "libs/react/data-access/render-props/src/index.ts"
       ],
-      "@atlascode/react-sections": ["libs/react/features/sections/src/index.ts"]
+      "@atlascode/react-sections": [
+        "libs/react/features/sections/src/index.ts"
+      ],
+      "@atlascode/utility-assertions": ["libs/shared/assertions/src/index.ts"],
+      "@atlascode/utility-browser": ["libs/shared/browser/src/index.ts"],
+      "@atlascode/utility-server": ["libs/shared/server/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
