--- a/nx.json
+++ b/nx.json
@@ -57,6 +57,15 @@
     },
     "react-ui-components": {
       "tags": []
+    },
+    "shared-assertions": {
+      "tags": []
+    },
+    "shared-browser": {
+      "tags": []
+    },
+    "shared-server": {
+      "tags": []
     }
   }
 }
