[Refactor][Port] Added all helper/utilities functions from previous repo to this one

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,9 @@
           "error",
           {
             "enforceBuildableLibDependency": true,
-            "allow": [],
+            "allow": [
+              
+            ],
             "depConstraints": [
               {
                 "sourceTag": "*",
@@ -24,7 +26,9 @@
     {
       "files": ["*.ts", "*.tsx"],
       "extends": ["plugin:@nrwl/nx/typescript"],
-      "rules": {}
+      "rules": {
+        
+      }
     },
     {
       "files": ["*.js", "*.jsx"],
