--- a/libs/shared/.eslintrc.json
+++ b/libs/shared/.eslintrc.json
@@ -1,12 +1,10 @@
 {
-  "extends": ["plugin:@nrwl/nx/react", "../../../../.eslintrc.json"],
+  "extends": ["../../.eslintrc.json"],
   "ignorePatterns": ["!**/*"],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-      "rules": {
-        
-      }
+      "rules": {}
     },
     {
       "files": ["*.ts", "*.tsx"],
