--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@atlascode/helpers": ["libs/shared/src/index.ts"],
       "@atlascode/react-animations": ["libs/react/ui/animations/src/index.ts"],
       "@atlascode/react-components": ["libs/react/ui/components/src/index.ts"],
       "@atlascode/react-hoc": ["libs/react/data-access/hoc/src/index.ts"],
@@ -24,12 +25,7 @@
       "@atlascode/react-render-props": [
         "libs/react/data-access/render-props/src/index.ts"
       ],
-      "@atlascode/react-sections": [
-        "libs/react/features/sections/src/index.ts"
-      ],
-      "@atlascode/utility-assertions": ["libs/shared/assertions/src/index.ts"],
-      "@atlascode/utility-browser": ["libs/shared/browser/src/index.ts"],
-      "@atlascode/utility-server": ["libs/shared/server/src/index.ts"]
+      "@atlascode/react-sections": ["libs/react/features/sections/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
