[Refactor][Port] Flattened react data access library so all data access utilities/components/functions come from the same origin

--- a/nx.json
+++ b/nx.json
@@ -34,13 +34,7 @@
       "tags": [],
       "implicitDependencies": ["olympus-core"]
     },
-    "react-data-access-hoc": {
-      "tags": []
-    },
-    "react-data-access-hooks": {
-      "tags": []
-    },
-    "react-data-access-render-props": {
+    "react-data-access": {
       "tags": []
     },
     "react-features-layouts": {
