--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,13 +18,9 @@
       "@atlascode/helpers": ["libs/shared/src/index.ts"],
       "@atlascode/react-animations": ["libs/react/ui/animations/src/index.ts"],
       "@atlascode/react-components": ["libs/react/ui/components/src/index.ts"],
-      "@atlascode/react-hoc": ["libs/react/data-access/hoc/src/index.ts"],
-      "@atlascode/react-hooks": ["libs/react/data-access/hooks/src/index.ts"],
+      "@atlascode/react-data-access": ["libs/react/data-access/src/index.ts"],
       "@atlascode/react-layouts": ["libs/react/features/layouts/src/index.ts"],
       "@atlascode/react-pages": ["libs/react/features/pages/src/index.ts"],
-      "@atlascode/react-render-props": [
-        "libs/react/data-access/render-props/src/index.ts"
-      ],
       "@atlascode/react-sections": ["libs/react/features/sections/src/index.ts"]
     }
   },
