--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@emotion/styled": "11.1.5",
     "@material-ui/core": "^5.0.0-beta.0",
     "@nrwl/next": "12.5.7",
+    "@xobotyi/scrollbar-width": "^1.9.5",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
     "lodash": "^4.17.21",
