--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
     "lodash": "^4.17.21",
+    "lottie-web": "^5.7.11",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
