--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "react-spring": "^9.2.3",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
