--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@nrwl/tao": "12.5.7",
     "@nrwl/web": "12.5.7",
     "@nrwl/workspace": "12.5.7",
+    "@rollup/plugin-commonjs": "^19.0.0",
     "@storybook/addon-essentials": "~6.3.0",
     "@storybook/react": "~6.3.0",
     "@svgr/webpack": "^5.4.0",
@@ -89,6 +90,7 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "jest": "27.0.3",
     "prettier": "^2.3.1",
+    "rollup": "^2.53.0",
     "ts-jest": "27.0.3",
     "ts-node": "~9.1.1",
     "tslib": "^2.0.0",
