[Feature] Instituto Gnosis setup; implemented custom nextjs _app to properly render material UI theme/styles due to SSR

--- a/nx.json
+++ b/nx.json
@@ -33,6 +33,13 @@
     ]
   },
   "projects": {
+    "gnosis-core": {
+      "tags": []
+    },
+    "gnosis-core-e2e": {
+      "tags": [],
+      "implicitDependencies": ["gnosis-core"]
+    },
     "helpers": {
       "tags": []
     },
