--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "nx": "nx",
-    "start": "nx serve",
+    "start-stop": "nx serve",
     "build": "nx build",
     "test": "nx test",
     "lint": "nx workspace-lint && nx lint",
@@ -31,7 +31,6 @@
     "@emotion/server": "11.0.0",
     "@emotion/styled": "11.1.5",
     "@material-ui/core": "^5.0.0-beta.0",
-    "@nrwl/next": "12.5.7",
     "@xobotyi/scrollbar-width": "^1.9.5",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
@@ -48,6 +47,7 @@
   "devDependencies": {
     "@babel/core": "7.12.13",
     "@babel/preset-env": "7.12.13",
+    "@nrwl/next": "12.5.7",
     "@babel/preset-react": "7.12.13",
     "@babel/preset-typescript": "7.12.13",
     "@emotion/babel-plugin": "11.2.0",
@@ -57,7 +57,6 @@
     "@nrwl/eslint-plugin-nx": "12.5.7",
     "@nrwl/jest": "12.5.7",
     "@nrwl/linter": "12.5.7",
-    "@nrwl/next": "^12.5.7",
     "@nrwl/node": "^12.5.7",
     "@nrwl/nx-plugin": "^12.5.7",
     "@nrwl/react": "^12.5.7",
