--- a/package.json
+++ b/package.json
@@ -34,20 +34,19 @@
     "@xobotyi/scrollbar-width": "^1.9.5",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
+    "framer-motion": "^4.1.17",
     "lodash": "^4.17.21",
     "lottie-web": "^5.7.11",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "react-spring": "^9.2.3",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.13",
     "@babel/preset-env": "7.12.13",
-    "@nrwl/next": "12.5.7",
     "@babel/preset-react": "7.12.13",
     "@babel/preset-typescript": "7.12.13",
     "@emotion/babel-plugin": "11.2.0",
@@ -57,6 +56,7 @@
     "@nrwl/eslint-plugin-nx": "12.5.7",
     "@nrwl/jest": "12.5.7",
     "@nrwl/linter": "12.5.7",
+    "@nrwl/next": "12.5.7",
     "@nrwl/node": "^12.5.7",
     "@nrwl/nx-plugin": "^12.5.7",
     "@nrwl/react": "^12.5.7",
