--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-intersection-observer": "^8.32.0",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
   },
