--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.32.0",
     "regenerator-runtime": "0.13.7",
+    "smooth-scrollbar": "^8.6.2",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
