--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@storybook/react": "~6.3.0",
     "@svgr/webpack": "^5.4.0",
     "@testing-library/react": "11.2.6",
+    "@types/faker": "^5.5.7",
     "@types/jest": "26.0.8",
     "@types/lodash": "^4.14.171",
     "@types/node": "14.14.33",
@@ -89,6 +90,7 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.23.1",
     "eslint-plugin-react-hooks": "4.2.0",
+    "faker": "^5.5.3",
     "jest": "27.0.3",
     "prettier": "^2.3.1",
     "rollup": "^2.53.0",
