--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-intersection-observer": "^8.32.0",
     "regenerator-runtime": "0.13.7",
     "smooth-scrollbar": "^8.6.2",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "zustand": "^3.5.7"
   },
   "devDependencies": {
     "@babel/core": "7.12.13",
