--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@rollup/plugin-commonjs": "^19.0.0",
     "@storybook/addon-essentials": "~6.3.0",
     "@storybook/react": "~6.3.0",
+    "@svgr/cli": "^5.5.0",
     "@svgr/webpack": "^5.4.0",
     "@testing-library/react": "11.2.6",
     "@types/faker": "^5.5.7",
