[Bugfix] Removed leading comma in tsconfig files that was causing webpack to break

--- a/libs/react/.storybook/tsconfig.json
+++ b/libs/react/.storybook/tsconfig.json
@@ -4,11 +4,14 @@
     "emitDecoratorMetadata": true,
     "outDir": ""
   },
+  "files": [
+    "../custom.d.ts"
+  ],
   "exclude": [
     "../**/*.spec.ts",
     "../**/*.spec.js",
     "../**/*.spec.tsx",
     "../**/*.spec.jsx"
   ],
-  "include": ["../src/**/*", "*.js", "../custom.d.ts"]
+  "include": ["../src/**/*", "*.js"]
 }
