--- a/libs/react/tsconfig.lib.json
+++ b/libs/react/tsconfig.lib.json
@@ -6,9 +6,7 @@
   },
   "files": [
     "../../node_modules/@nrwl/react/typings/cssmodule.d.ts",
-    "../../node_modules/@nrwl/react/typings/image.d.ts",
-    "./index.d.ts"
-  ],
+    "../../node_modules/@nrwl/react/typings/image.d.ts" ],
   "exclude": [
     "**/*.spec.ts",
     "**/*.spec.tsx",
