[Feature] Initial implementation for offer card slider including full swiper setup/config and a few CSS tweaks/knobs that needed adjustment

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@emotion/server": "11.0.0",
     "@emotion/styled": "11.1.5",
     "@material-ui/core": "^5.0.0-beta.0",
+    "@material-ui/icons": "^5.0.0-beta.1",
     "@xobotyi/scrollbar-width": "^1.9.5",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
@@ -45,6 +46,7 @@
     "react-intersection-observer": "^8.32.0",
     "regenerator-runtime": "0.13.7",
     "smooth-scrollbar": "^8.6.2",
+    "swiper": "^6.7.5",
     "tslib": "^2.0.0",
     "zustand": "^3.5.7"
   },
