--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "eslint-plugin-react": "7.23.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "faker": "^5.5.3",
+    "formik": "^2.2.9",
     "jest": "27.0.3",
     "prettier": "^2.3.1",
     "rollup": "^2.53.0",
@@ -104,6 +105,7 @@
     "ts-node": "~9.1.1",
     "tslib": "^2.0.0",
     "typescript": "~4.2.4",
-    "url-loader": "^3.0.0"
+    "url-loader": "^3.0.0",
+    "yup": "^0.32.9"
   }
 }
