--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@typescript-eslint/parser": "4.19.0",
     "babel-jest": "26.2.2",
     "babel-loader": "8.1.0",
+    "csstype": "^3.0.8",
     "cypress": "^7.3.0",
     "dotenv": "8.2.0",
     "eslint": "7.22.0",
