[Refactor] Refactored API route endpoint with a better, slighly more secure design

--- a/apps/gnosis/core/.env.local
+++ b/apps/gnosis/core/.env.local
@@ -1,1 +1,2 @@
 CLOUD_FUNCTION_BASE_URL=https://us-central1-gnosis-webapp.cloudfunctions.net/api
+CLOUD_FUNCTION_API_KEY=625be0cc-294a-4a93-ab3c-13f5a79bb58d
