--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@xobotyi/scrollbar-width": "^1.9.5",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "document-register-element": "1.13.1",
     "framer-motion": "^4.1.17",
     "immer": "^9.0.5",
@@ -77,6 +78,7 @@
     "@svgr/cli": "^5.5.0",
     "@svgr/webpack": "^5.4.0",
     "@testing-library/react": "11.2.6",
+    "@types/cors": "^2.8.12",
     "@types/faker": "^5.5.7",
     "@types/jest": "26.0.8",
     "@types/lodash": "^4.14.171",
