--- a/package.json
+++ b/package.json
@@ -58,20 +58,21 @@
     "@babel/preset-react": "7.12.13",
     "@babel/preset-typescript": "7.12.13",
     "@emotion/babel-plugin": "11.2.0",
-    "@nrwl/cli": "12.5.7",
-    "@nrwl/cypress": "12.5.7",
-    "@nrwl/devkit": "12.5.7",
-    "@nrwl/eslint-plugin-nx": "12.5.7",
-    "@nrwl/jest": "12.5.7",
-    "@nrwl/linter": "12.5.7",
-    "@nrwl/next": "12.5.7",
-    "@nrwl/node": "^12.5.7",
-    "@nrwl/nx-plugin": "^12.5.7",
-    "@nrwl/react": "^12.5.7",
-    "@nrwl/storybook": "12.5.7",
-    "@nrwl/tao": "12.5.7",
-    "@nrwl/web": "12.5.7",
-    "@nrwl/workspace": "12.5.7",
+    "@nrwl/cli": "12.7.1",
+    "@nrwl/cypress": "12.7.1",
+    "@nrwl/devkit": "12.7.1",
+    "@nrwl/eslint-plugin-nx": "12.7.1",
+    "@nrwl/jest": "12.7.1",
+    "@nrwl/linter": "12.7.1",
+    "@nrwl/next": "12.7.1",
+    "@nrwl/node": "^12.7.1",
+    "@nrwl/nx-plugin": "^12.7.1",
+    "@nrwl/react": "^12.7.1",
+    "@nrwl/storybook": "12.7.1",
+    "@nrwl/tao": "12.7.1",
+    "@nrwl/web": "12.7.1",
+    "@nrwl/workspace": "12.7.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.0-rc.2",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@storybook/addon-essentials": "~6.3.0",
     "@storybook/react": "~6.3.0",
@@ -90,6 +91,7 @@
     "@typescript-eslint/parser": "4.19.0",
     "babel-jest": "26.2.2",
     "babel-loader": "8.1.0",
+    "copy-webpack-plugin": "^9.0.1",
     "csstype": "^3.0.8",
     "cypress": "^7.3.0",
     "dotenv": "8.2.0",
@@ -103,13 +105,22 @@
     "faker": "^5.5.3",
     "formik": "^2.2.9",
     "jest": "27.0.3",
+    "mini-css-extract-plugin": "^2.1.0",
     "prettier": "^2.3.1",
+    "react-refresh": "^0.10.0",
     "rollup": "^2.53.0",
+    "source-map-loader": "^3.0.0",
+    "terser-webpack-plugin": "^5.1.1",
     "ts-jest": "27.0.3",
     "ts-node": "~9.1.1",
     "tslib": "^2.0.0",
     "typescript": "~4.2.4",
     "url-loader": "^3.0.0",
+    "webpack": "^5.47.0",
+    "webpack-dev-server": "4.0.0-rc.0",
+    "webpack-merge": "^5.8.0",
+    "webpack-node-externals": "^3.0.0",
+    "webpack-sources": "^3.0.2",
     "yup": "^0.32.9"
   }
 }
