[chore][config][react-web-hooks] Initialized complete config for react-web-hooks library

--- a/libs/react-web-ui/.babelrc
+++ b/libs/react-web-ui/.babelrc
@@ -4,9 +4,10 @@
       "@nrwl/react/babel",
       {
         "runtime": "automatic",
-        "useBuiltIns": "usage"
+        "useBuiltIns": "usage",
+        "importSource": "@emotion/react"
       }
     ]
   ],
-  "plugins": []
+  "plugins": ["@emotion/babel-plugin"]
 }
