--- a/nx.json
+++ b/nx.json
@@ -53,6 +53,9 @@
     "react": {
       "tags": []
     },
+    "react-web-hooks": {
+      "tags": []
+    },
     "react-web-ui": {
       "tags": []
     }
