[chore][config][react-web-animations][react-web-ui-composite] Initialized configuration for both react animations library and composite react web componentes library

--- a/nx.json
+++ b/nx.json
@@ -53,10 +53,16 @@
     "react": {
       "tags": []
     },
+    "react-web-animations": {
+      "tags": []
+    },
     "react-web-hooks": {
       "tags": []
     },
     "react-web-ui": {
+      "tags": []
+    },
+    "react-web-ui-composite": {
       "tags": []
     }
   }
