--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,8 +17,14 @@
     "paths": {
       "@atlascode/helpers": ["libs/helpers/src/index.ts"],
       "@atlascode/react-core": ["libs/react/src/index.ts"],
+      "@atlascode/react-web-animations": [
+        "libs/react-web-animations/src/index.ts"
+      ],
       "@atlascode/react-web-hooks": ["libs/react-web-hooks/src/index.ts"],
-      "@atlascode/react-web-ui": ["libs/react-web-ui/src/index.ts"]
+      "@atlascode/react-web-ui": ["libs/react-web-ui/src/index.ts"],
+      "@atlascode/react-web-ui-composite": [
+        "libs/react-web-ui-composite/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
