[chore][config][lottie-react-wrapper] Created appropriate library to host custom up to date, perfomant lottie react wrapper to easily use lottie files and quickly implement animations

--- a/nx.json
+++ b/nx.json
@@ -43,6 +43,9 @@
     "helpers": {
       "tags": []
     },
+    "lottie-react-wrapper": {
+      "tags": []
+    },
     "olympus-core": {
       "tags": []
     },
