--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,9 @@
     "baseUrl": ".",
     "paths": {
       "@atlascode/helpers": ["libs/helpers/src/index.ts"],
+      "@atlascode/lottie-react-wrapper": [
+        "libs/lottie-react-wrapper/src/index.js"
+      ],
       "@atlascode/react-core": ["libs/react/src/index.ts"],
       "@atlascode/react-web-animations": [
         "libs/react-web-animations/src/index.ts"
