[chore][config][react-web-layouts] initialize initial config for react-web-layouts library

--- a/nx.json
+++ b/nx.json
@@ -62,6 +62,9 @@
     "react-web-hooks": {
       "tags": []
     },
+    "react-web-layouts": {
+      "tags": []
+    },
     "react-web-ui": {
       "tags": []
     },
