[chore][config][jss-mixins] initialized config for jss-mixins library

--- a/nx.json
+++ b/nx.json
@@ -43,6 +43,9 @@
     "helpers": {
       "tags": []
     },
+    "jss-mixins": {
+      "tags": []
+    },
     "lottie-react-wrapper": {
       "tags": []
     },
