--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
   },
   "private": true,
   "dependencies": {
+    "@emotion/cache": "^11.4.0",
     "@emotion/react": "11.1.5",
     "@emotion/server": "11.0.0",
     "@emotion/styled": "11.1.5",
     "@material-ui/core": "^5.0.0-beta.0",
     "@material-ui/icons": "^5.0.0-beta.1",
+    "@material-ui/system": "^5.0.0-beta.4",
     "@xobotyi/scrollbar-width": "^1.9.5",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
