[chore][refactor][smooth-scrollbar-react-wrapper] Abstracted smooth scroll react wrapper to its own library, ported along all of its relevant components that enable ease of use in a modern react way with hooks, context and a utility wrapper to wrap the entire page inside a smooth scroll container

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,7 +26,10 @@
       ],
       "@atlascode/react-web-hooks": ["libs/react-web-hooks/src/index.ts"],
       "@atlascode/react-web-layouts": ["libs/react-web-layouts/src/index.ts"],
-      "@atlascode/react-web-ui": ["libs/react-web-ui/src/index.ts"]
+      "@atlascode/react-web-ui": ["libs/react-web-ui/src/index.ts"],
+      "@atlascode/smooth-scrollbar-react-wrapper": [
+        "libs/smooth-scrollbar-react-wrapper/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
