[chore][refactor][react-web-ui] moved most of the components to the new general component library

--- a/nx.json
+++ b/nx.json
@@ -49,6 +49,9 @@
     "lottie-react-wrapper": {
       "tags": []
     },
+    "mocks": {
+      "tags": []
+    },
     "olympus-core": {
       "tags": []
     },
