[refactor][chore][config] Extracted swiper slider helpers/wrappers from general ui components library to avoid bloat by requiring user to also add swiperjs as a dependency even if they dont intend to use any sliders; moved sliders created using swiper and aforementioned helpers to general slider library aswell

--- a/nx.json
+++ b/nx.json
@@ -49,9 +49,6 @@
     "lottie-react-wrapper": {
       "tags": []
     },
-    "mocks": {
-      "tags": []
-    },
     "olympus-core": {
       "tags": []
     },
@@ -69,6 +66,9 @@
       "tags": []
     },
     "react-web-layouts": {
+      "tags": []
+    },
+    "react-web-sliders": {
       "tags": []
     },
     "react-web-ui": {
