--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,13 +20,13 @@
       "@atlascode/lottie-react-wrapper": [
         "libs/lottie-react-wrapper/src/index.js"
       ],
-      "@atlascode/mocks": ["libs/mocks/src/index.ts"],
       "@atlascode/react-core": ["libs/react/src/index.ts"],
       "@atlascode/react-web-animations": [
         "libs/react-web-animations/src/index.ts"
       ],
       "@atlascode/react-web-hooks": ["libs/react-web-hooks/src/index.ts"],
       "@atlascode/react-web-layouts": ["libs/react-web-layouts/src/index.ts"],
+      "@atlascode/react-web-sliders": ["libs/react-web-sliders/src/index.ts"],
       "@atlascode/react-web-ui": ["libs/react-web-ui/src/index.ts"],
       "@atlascode/smooth-scrollbar-react-wrapper": [
         "libs/smooth-scrollbar-react-wrapper/src/index.ts"
