--- a/libs/react-web-sliders/tsconfig.spec.json
+++ b/libs/react-web-sliders/tsconfig.spec.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
-    "types": ["jest", "node"],
+    "types": ["jest", "node"]
   },
   "include": [
     "**/*.spec.ts",
