--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-intersection-observer": "^8.32.0",
     "regenerator-runtime": "0.13.7",
     "smooth-scrollbar": "^8.6.2",
+    "styled-jsx": "3.4.4",
     "swiper": "^6.7.5",
     "tslib": "^2.0.0",
     "zustand": "^3.5.7"
@@ -88,6 +89,7 @@
     "@types/node": "14.14.33",
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.3",
+    "@types/styled-jsx": "2.2.8",
     "@types/swiper": "^5.4.3",
     "@typescript-eslint/eslint-plugin": "4.19.0",
     "@typescript-eslint/parser": "4.19.0",
