--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.32.0",
+    "react-use": "^17.2.4",
     "regenerator-runtime": "0.13.7",
     "smooth-scrollbar": "^8.6.2",
     "styled-jsx": "3.4.4",
