--- a/libs/core/tsconfig.json
+++ b/libs/core/tsconfig.json
@@ -8,7 +8,9 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "resolveJsonModule": true,
+
   },
   "files": [],
   "include": [],
