[bugfix] marked react jsx runtime and react is as external deps as it was causing issues when trying to build with babel; bumped semver to 2.0.1-alpha.1 as llast batch of changes introduces breaking changes on motion box helper APIs

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,11 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@atlascode/core": ["libs/core/src/index.ts"],
-      "@atlascode/react-core": ["libs/react/src/index.ts"],
-      "@atlascode/smooth-scrollbar-react-wrapper": [
-        "libs/smooth-scrollbar-react-wrapper/src/index.ts"
-      ]
+      "@atlascode/core": ["libs/core/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
