--- a/libs/core/.babelrc
+++ b/libs/core/.babelrc
@@ -1,6 +1,12 @@
 {
   "presets": [
-    "next/babel"
+    [
+      "@nrwl/react/babel",
+      {
+        "runtime": "automatic",
+        "useBuiltIns": "usage"
+      }
+    ]
   ],
   "plugins": []
 }
