[bugfix] implemented memo for random id instead of using now removed useId hook

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "immer": "^9.0.5",
     "lodash": "^4.17.21",
     "lottie-web": "^5.7.11",
+    "nanoid": "^3.1.25",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
