--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "prettier": "^2.3.1",
     "react-refresh": "^0.10.0",
     "rollup": "^2.53.0",
+    "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "ts-jest": "27.0.3",
